--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "less-loader": "^4.1.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.3.3",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "style-loader": "^0.21.0",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react-hot-loader": "^4.3.5",
+    "webpack-log": "^2.0.0"
+  }
 }
