--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "less-loader": "^4.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -33,6 +32,7 @@
     "webpack-dev-server": "^3.1.7"
   },
   "devDependencies": {
+    "mini-css-extract-plugin": "^0.4.2",
     "react-hot-loader": "^4.3.5",
     "webpack-log": "^2.0.0"
   }
