--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
     "less-loader": "^4.1.0",
-    "office-ui-fabric-react": "^6.61.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "office-ui-fabric-react": "^6.65.0",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.17.1",
+    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-dev-server": "^3.1.8"
   },
   "devDependencies": {
+    "eslint-scope": "^4.0.0",
     "mini-css-extract-plugin": "^0.4.2",
-    "react-hot-loader": "^4.3.5",
+    "react-hot-loader": "^4.3.6",
     "webpack-log": "^2.0.0"
   }
 }
