--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "office-ui-fabric-react": "^6.65.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-froala-wysiwyg": "^2.8.4",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
